# films-py-backend

./: .env.example  Makefile  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml
deployment/: local.Dockerfile
migrations/: env.py
migrations/versions/: 383de11b642a_.py  58358eeeb88b_.py
src/: config.py  database.py  main.py  mongo.py  seeder.py
src/api/: router.py
src/api/v1/: __init__.py  films.py
src/exceptions/: base.py  film.py  handler.py
src/models/: __init__.py  film.py
src/query_builders/: film_query_builder.py
src/schemas/films/: film.py  film_filter.py  popular_search.py
src/scripts/: clear_popular_searches.py
src/services/: film.py  popular_search.py
tests/: test_config.py
tests/schemas/films/: test_film_filter.py
